# time_tracker

./: .gitignore  .taurignore  Cargo.toml  README.md  Trunk.toml  index.html
src/: main.rs  pomodoro.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  timer_plugin.rs
src/components/: app.rs  mod.rs  pomodoro.rs  timer.rs  title_bar.rs
src/tauri/: mod.rs  window.rs
ui/: .gitignore  Cargo.toml  index.html
ui/public/: glue.js
ui/src/: main.rs
ui/src/components/: mod.rs  pomodoro.rs  timer.rs
ui/src/tauri/: mod.rs
ui/src/utils/: mod.rs  weak_component_link.rs
