[package]
name = "time_tracker_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
stylist = { version = "0.12", features = ["yew"] }
print_duration = "1.0"
gloo = "0.8"
instant = "0.1"
wasm-bindgen = "0.2"

[workspace]
members = ["src-tauri"]
