[package]
name = "time_tracker_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
print_duration = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
gloo-utils = { version = "0.1", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = ["src-tauri"]
